# custom_test_matchers

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
include/custom_test_matchers/: all.h
include/custom_test_matchers/details/: custom_string_makers.h  matchers_imp.h  util.h
src/: CMakeLists.txt  all.cpp  all.h
src/details/: almost_equal_funcs.cpp  almost_equal_funcs.h  custom_string_makers.cpp  custom_string_makers.h  matchers_imp.cpp  matchers_imp.h  util.cpp  util.h
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  example.cpp
test_package/src/: example.cpp
tests/: CMakeLists.txt  main.cpp
